Bug 1428079 - No horizontal scrollbar when bug summary is very long or narrow browser width

--- a/skins/standard/global.css
+++ b/skins/standard/global.css
@@ -1143,8 +1143,7 @@ hr {
     position: relative;
     outline: none;
     padding: 0 15px;
-    overflow-x: hidden;
-    overflow-y: scroll;
+    overflow: auto;
     scroll-behavior: smooth;
 }
 
